add js junctionality for plus minus simple calculations

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <div class="container">
         <h1 class="text1">Quntity</h1>
         <div id="rounded">
-            <div class="minus">-</div>
-            <span>1</span>
-            <div class="plus">+</div>
+            <div id="minus"  class="minus">-</div>
+            <span id="num">1</span>
+            <div id="plus" class="plus">+</div>
         </div>
     </div>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
